--- a/html-css/daVinci/header.css
+++ b/html-css/daVinci/header.css
@@ -4,7 +4,7 @@ header{
     background-position: center;
     background-size: cover;
     height: 100vh;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 header::before {
     content: ""; 
@@ -20,18 +20,17 @@ section.conteudo-header{
     width: 100%;
     height: 91%;
     display: flex;
-    justify-content: center;
     align-items: center;
     /* border: 3px solid tomato; */
     gap: 3%;
     font-size: 2rem;
 }
-section.conteudo-header div.titulo-introducao{
-    /* border: 3px solid tomato; */    
-}
+/* section.conteudo-header div.titulo-introducao{
+    border: 3px solid tomato;    
+} */
 section.conteudo-header div.titulo{
     width: 35%;
-    margin: 1rem auto;
+    margin: 1rem 5rem;
 }
 section.conteudo-header div.titulo h1{
         text-shadow:
@@ -43,7 +42,7 @@ section.conteudo-header div.titulo h1{
 
 section.conteudo-header div.introducao  {
     width: 35%;
-    margin: 0 auto;
+    margin: 1rem 5rem;
         text-shadow:
         2px 2px 0 rgb(74, 74, 74),
         -2px -2px 0 rgb(74, 74, 74),
