finalização pag michelangelo

--- a/html-css/michelangelo/nav.css
+++ b/html-css/michelangelo/nav.css
@@ -16,7 +16,7 @@ nav ul{
     justify-content: center;
     /* alinha os elementos filhos de uma div verticalmente */
     align-items: center;
-    background: #cfb39e;
+    background: #584c3e;
 
     /* border: 1px solid tomato; */
 
