--- a/html-css/bach/header.css
+++ b/html-css/bach/header.css
@@ -1,6 +1,6 @@
 header{
     position: relative;
-    background-image: url('imagens-bach/bach.jpg');
+    background-image: url("imagens-bach/bach.jpg");
     background-position: center;
     background-size: cover;
     height: 100vh;
