--- a/html-css/michelangelo/header.css
+++ b/html-css/michelangelo/header.css
@@ -20,11 +20,10 @@ section.conteudo-header{
     width: 100%;
     height: 91%;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     /* border: 3px solid tomato; */
     font-size: 2rem;
-    text-align: right;
+    padding: 1rem 5rem;
 }
 /* section.conteudo-header div.titulo-introducao{
     border: 3px solid tomato;    
@@ -56,6 +55,4 @@ section.conteudo-header .titulo-introducao {
     margin-right: 3vw; /* espaço da borda direita */
     display: flex;
     flex-direction: column;
-    align-items: flex-end; /* garante alinhamento à direita */
-    text-align: right;
 }
